<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_layout"></include>

    <LinearLayout
        android:id="@+id/top_Tab1"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/top_tab1"
            style="@style/topTabText"
            android:text="@string/sear_tab1"/>
        <TextView
            android:id="@+id/top_tab2"
            style="@style/topTabText"
            android:text="@string/sear_tab2"/>
        <TextView
            android:id="@+id/top_tab3"
            style="@style/topTabText"
            android:text="@string/sear_tab3"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_Tab2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/top_tab4"
            style="@style/topTabText"
            android:text="持仓搜索"/>
        <TextView
            android:id="@+id/top_tab5"
            style="@style/topTabText"
            android:text="板块搜索"/>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" />

</LinearLayout>