<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_layout"
        android:id="@+id/title_in_main2"></include>
    <include layout="@layout/progressbar"></include>

    <LinearLayout
        android:id="@+id/top_Tab1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_in_main2"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/light_gray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/top_tab1"
            style="@style/topTabText"
            android:text="@string/sear_tab1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/top_tab2"
            style="@style/topTabText"
            android:text="@string/sear_tab2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/top_tab3"
            style="@style/topTabText"
            android:text="@string/sear_tab3"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_Tab2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_Tab1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/light_gray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/top_tab4"
            style="@style/topTabText"
            android:text="持仓搜索"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/top_tab5"
            style="@style/topTabText"
            android:text="板块搜索"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_Tab2"/>

</androidx.constraintlayout.widget.ConstraintLayout>