<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorNavi"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab1"
            android:layout_height="50dp"
            style="@style/naviTab">

            <ImageButton
                android:id="@+id/tab_img1"
                style="@style/naviButton"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:padding="0dp"
                android:src="@mipmap/found_chosen" />

            <TextView
                android:id="@+id/tab_text1"
                style="@style/naviText"
                android:layout_margin="0dp"
                android:text="@string/tab1"
                android:textColor="#76787D"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab2"
            android:layout_height="50dp"
            style="@style/naviTab">


            <ImageButton
                android:id="@+id/tab_img2"
                style="@style/naviButton"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:src="@mipmap/star_normal" />

            <TextView
                android:id="@+id/tab_text2"
                style="@style/naviText"
                android:text="@string/tab2"
                android:textColor="#76787D"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab3"
            android:layout_height="50dp"
            style="@style/naviTab">

            <ImageButton
                android:id="@+id/tab_img3"
                style="@style/naviButton"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:src="@mipmap/user_normal" />

            <TextView
                android:id="@+id/tab_text3"
                style="@style/naviText"
                android:text="@string/tab3"
                android:textColor="#76787D"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorNavi"/>

</LinearLayout>