<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <!--<com.example.studying.StatusBarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"/>-->

    <ImageView
        android:id="@+id/page_fragment1_image1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/guanggao"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/colorNavi">

        <LinearLayout
            android:id="@+id/sear_tab1"
            style="@style/searchTab">
            <ImageView
                android:layout_height="45dp"
                android:layout_width="45dp"
                android:layout_marginTop="8dp"
                android:id="@+id/sear_but1"
                style="@style/searchButton"
                android:src="@mipmap/found_search"/>

            <TextView
                style="@style/searchText"
                android:layout_marginTop="7dp"
                android:text="@string/sear_tab1"
                android:textColor="#636363"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorNaviLine"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/sear_tab2"
            style="@style/searchTab">
            <ImageView
                android:layout_height="45dp"
                android:layout_width="45dp"
                android:layout_marginTop="8dp"
                android:id="@+id/sear_but2"
                style="@style/searchButton"
                android:src="@mipmap/stock"/>

            <TextView
                style="@style/searchText"
                android:layout_marginTop="7dp"
                android:text="@string/sear_tab2"
                android:textColor="#636363"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorNaviLine"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/sear_tab3"
            style="@style/searchTab">
            <ImageView
                android:layout_height="45dp"
                android:layout_width="45dp"
                android:layout_marginTop="8dp"
                android:id="@+id/sear_but3"
                style="@style/searchButton"
                android:src="@mipmap/search"/>

            <TextView
                style="@style/searchText"
                android:layout_marginTop="7dp"
                android:text="@string/sear_tab3"
                android:textColor="#636363"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>-->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pagefrag1_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:background="@drawable/frag1_item__background">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/page_fragment1_icon1"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/icon1_1" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/page_fragment1_icon1"
                            android:paddingStart="10dp"
                            android:text="热点股票"
                            android:textSize="20sp" />
                    </RelativeLayout>

                    <ImageView
                        android:id="@+id/page_fragment1_image2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/pppicture"/>

                    <ListView
                        android:id="@+id/page_fragment1_list1"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:visibility="gone"
                        tools:visibility="visible"/>
                    <Button
                        android:id="@+id/page_fragment1_button1"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:text="展开更多热点股票"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:background="@color/transparent"/>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="15dp"
                    android:orientation="vertical"
                    android:background="@drawable/frag1_item__background">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/page_fragment1_icon2"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/tags" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/page_fragment1_icon2"
                            android:paddingStart="10dp"
                            android:text="基金资讯"
                            android:textSize="20sp" />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/pagefrag1_recycleview"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"/>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</LinearLayout>
